--- a/src/index.css
+++ b/src/index.css
@@ -157,9 +157,10 @@ button {
 code {
   font-family: "Pretendard";
 }
-div{
+div {
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 }
 /**************** font ******************/
 @font-face {
@@ -253,32 +254,49 @@ div{
   font-weight: 400;
   font-style: normal;
 }
+@import url("https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap");
 
-
-.msg {
-  background-color: #468cf3;
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='100' ry='100' stroke='white' stroke-width='25' stroke-dasharray='2%2c 6' stroke-dashoffset='28' stroke-linecap='butt'/%3e%3c/svg%3e");
-
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  left: 52px;
-  cursor: pointer;
-  bottom: 30px;
-  border-radius: 50%;
-
-
-}
-.msg p{
-  color: #fff;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 18px;
-
-  font-weight: 400;
-  
+.BoxTit {
+  line-height: 1.6;
+  font-size: 14px;
 }
 
+.BoxTxt {
+  font-size: 16px;
+  line-height: 1.4;
+}
+.BoxTxt span {
+  display: block;
+}
+.Section2Txt {
+  display: flex;
+  width: 600px;
+  height: 330px;
+  background-color: #f8e276;
+  transform: translate(0, 50%);
+  color: #464646;
+  margin: 0 auto;
+}
+.Number {
+  display: flex;
+  justify-content: flex-end;
+  padding: 2vw 5vw 12vw 5vw;
+  color: #000;
+}
+
+.NumBox {
+  display: flex;
+  height: 280px;
+  font-size: 280px;
+  line-height: 1;
+  margin: 0 ;
+  overflow: hidden;
+  flex-direction: row;
+}
+
+.NumList{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: translateY(0);
+}
