--- a/src/index.css
+++ b/src/index.css
@@ -256,47 +256,37 @@ div {
 }
 @import url("https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap");
 
-.BoxTit {
-  line-height: 1.6;
-  font-size: 14px;
+.Pub {
+  width: 100%;
+  background: #fff;
+  padding-top: 30vw;
+  width: 100%;
 }
 
-.BoxTxt {
-  font-size: 16px;
-  line-height: 1.4;
-}
-.BoxTxt span {
-  display: block;
-}
-.Section2Txt {
-  display: flex;
-  width: 600px;
-  height: 330px;
-  background-color: #f8e276;
-  transform: translate(0, 50%);
-  color: #464646;
-  margin: 0 auto;
-}
-.Number {
-  display: flex;
-  justify-content: flex-end;
-  padding: 2vw 5vw 12vw 5vw;
-  color: #000;
+.PubH2 {
+  padding-top: 5vw;
+  text-align: right;
+  font-size: 70px;
+  font-weight: 800;
+  padding-right: 40px;
+  color: #fff;
+  -webkit-text-stroke: 1px #519d5a;
 }
 
-.NumBox {
-  display: flex;
-  height: 280px;
-  font-size: 280px;
-  line-height: 1;
-  margin: 0 ;
-  overflow: hidden;
-  flex-direction: row;
+.PubBox {
+  margin: 80px 50px;
 }
 
-.NumList{
+.port {
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
+
+.PubImg {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  transform: translateY(0);
+
 }
