--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   text-align: left;
   width: 100%;
   background-color: #519d5a;
+
 }
 html,
 body,
@@ -256,37 +257,156 @@ div {
 }
 @import url("https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap");
 
-.Pub {
-  width: 100%;
-  background: #fff;
-  padding-top: 30vw;
-  width: 100%;
-}
 
-.PubH2 {
-  padding-top: 5vw;
-  text-align: right;
-  font-size: 70px;
-  font-weight: 800;
-  padding-right: 40px;
-  color: #fff;
-  -webkit-text-stroke: 1px #519d5a;
-}
 
 .PubBox {
-  margin: 80px 50px;
+  height: 100vh;
+  width: 100%;
+  
 }
 
 .port {
-  background-color: aqua;
+  background-color: #519d5a;
   width: 100%;
   height: 100%;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
 .PubImg {
   display: flex;
   justify-content: center;
   align-items: center;
+}
 
+.PubImg img {
+  width: 700px;
+  max-height: 650px;
+}
+
+.PubTxt {
+  overflow: visible;
+  text-align: center;
+  color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 0 6vw;
+}
+.PubH4 {
+  line-height: 1;
+  font-size: 25px;
+  font-style: italic;
+}
+.PubTH2 {
+  font-size: 50px;
+  padding: 18px 0;
+}
+
+.PubBox p {
+  line-height: 2;
+  font-size: 20px;
+}
+
+.SiteBtn {
+  overflow: visible;
+
+  margin:24px 0;
+}
+
+.SiteBtn a {
+  padding: 10px;
+  border: 1px solid #FFF;
+  border-radius: 15%;
+  text-align: center;
+  margin-right: 10px;
+  font-size: 12px;
+  color: #FFF;
+}
+.SiteBtn a:hover{
+  background-color:#f6edd9;
+  border:1px solid #f6edd9;
+  color: #000;
+}
+
+.ProjectWrap{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.deajeon {
+  background-color: #e7f2e4;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
+.PubTxtB{
+  overflow: visible;
+  text-align: center;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 0 6vw;
+}
+
+.PubTxtB p{
+  line-height: 1.4;
+  font-size: 20px;
+}
+
+
+.deajeon .SiteBtn a {
+  padding: 10px;
+  border: 1px solid #000000;
+  border-radius: 15%;
+  text-align: center;
+  margin-right: 10px;
+  font-size: 12px;
+  color: #000;
+}
+.deajeon .SiteBtn a:hover{
+  background-color:#69b97c;
+  border: 1px solid #69b97c;
+  color: #fff;
+}
+
+.company{
+  background-color: #ae3b4d;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.company .SiteBtn a {
+  padding: 10px;
+  border: 1px solid #fff;
+  border-radius: 15%;
+  text-align: center;
+  margin-right: 10px;
+  font-size: 12px;
+  color: #fff;
+}
+.company .SiteBtn a:hover{
+  background-color:#a31f33;
+  border: 1px solid #a31f33;
+  color: #000;
 }
