--- a/src/index.css
+++ b/src/index.css
@@ -256,133 +256,96 @@ div {
 }
 @import url("https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap");
 
-.about {
+.EmailBox{
   width: 100%;
-  background: #519d5a;
-  padding-top: 15vw;
-  font-family: "Pretendard";
-  position: relative;
-}
-
-.AboutH2 {
   padding-top: 5vw;
-  text-align: right;
-  font-size: 70px;
+  font-family: "Pretendard";
+
+}
+
+.EmailH2{
+  padding-top: 5vw 0;
+  text-align: left;
+  font-size: 90px;
   font-weight: 800;
-  padding-right: 40px;
+  padding-left: 40px;
   color: #519d5a;
-  -webkit-text-stroke: 1px #fff;
+    -webkit-text-stroke: 1px #f8e276;
 }
 
-.AboutBox {
-  grid-area: auto;
-  display: flex;
-  margin: 50px 0px 0px;
-  inset: auto;
-  position: relative;
+.EmailP{
+  padding-left: 40px;
+  color:#f6edd9;
 
-  overflow: visible;
-  box-sizing: border-box;
-  width: 1440px;
-  height: 1440px;
-  padding: 0px 0px 720px;
 }
 
-.SkiList {
-  height: 50vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.MailLBox{
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  padding-top: 30px;
+  margin-left: 40px;
+  margin-bottom: 5vw;
   align-items: center;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  margin-top: 50px;
-  padding-left: 25px;
-  padding-bottom: 50px;
+
 }
 
-/* .SkiItm:hover .ItmBox {
-  transform: rotateY(180deg);
-} */
+.mailLine{
+  padding-top: 30px;
+  align-content: space-between;
+  margin: 0;
+  width: 50%;
 
-.SkiItm {
-  position: relative;
-  width: 30vw;
-  height: 30vw;
-  margin: 50px auto;
-  border-radius: 20px;
-  -webkit-perspective: 500px;
-  perspective: 500px;
 }
 
-.about .SkiItm + .SkiItm {
-  margin-left: 60px;
-}
-
-.ItmBox {
+.mailLine input{
+  border-bottom: 1px solid #f6edd9;
+  height: 4vw;
   width: 100%;
-  height: 100%;
-}
-.ItmTxt {
-  padding: 30px;
-  width: 100%;
-  height: 100%;
-
-  border-radius: 20px;
+  padding: 10px;
 }
 
-.ItmBox p {
-  font-weight: 700;
-  text-align: center;
-  font-size: 76px;
-  margin: 50px 0;
-}
-
-.ItmTxt span {
+.mailLine label{
   font-size: 20px;
-  width: 70px;
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
-}
-.ColorBox {
-  background-color: #e2b2d9;
+  color: #f8e276;
+
 }
 
-.HBox,
-.CBox,
-.JBox,
-.RBox,
-.TBox {
-  border-radius: 50%;
-
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  color: #fff;
-  font-size: 18px;
-  margin: 0 auto;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
+.FormAdd ,.FormSub ,.FormName{
+  margin-bottom: 20px;
 }
 
-.HBox {
-  background-color: #fa5026;
-}
-.CBox {
-  background-color: #2f80ed;
-}
-.JBox {
-  background-color: #ffcc00;
-}
-.RBox {
-  background-color: #61dafb;
+.MailForm{
+  padding-top: 30px;
+  align-content: space-between;
+  margin: 0;
 }
 
-.TBox {
-  background-color: #2f80ed;
+.MailForm label{
+  font-size: 20px;
+  color: #f8e276;
+
+}
+
+textarea{
+  border: 1px solid #f6edd9;
+  height: 250px;
+  resize: none;
+  width: 100%;
+
+}
+
+.MailInner{
+  width: 40%;
+}
+
+.submit{
+  margin-top: 20px;
+    width: 100%;
+    border: 1px solid #e2b2d9;
+    padding: 12px;
+    text-align: center;
+    background-color: #e2b2d9;
+    color: #f6edd9;
+    font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
 }
