--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
-  padding: 0;
-  margin: 0;
-  font-size: 18px;
-  font-weight: 400;
-  color: #000;
-  text-align: left;
-  width: 100%;
-  background-color: #519d5a;
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
+    font-weight: 400;
+    color: #000;
+    text-align: left;
+    width: 100%;
+    background-color: #519d5a;
 }
 html,
 body,
@@ -88,12 +88,12 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 
 article,
@@ -107,152 +107,150 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+    display: block;
 }
 
 ol,
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 blockquote,
 q {
-  quotes: none;
+    quotes: none;
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 img {
-  max-width: 100%;
-  vertical-align: top;
+    max-width: 100%;
+    vertical-align: top;
 }
 
 input,
 select,
 button {
-  font: inherit;
-  color: inherit;
-  border: 0;
-  background: transparent;
+    font: inherit;
+    color: inherit;
+    border: 0;
+    background: transparent;
 }
 
 button {
-  padding: 0;
-  cursor: pointer;
-  outline: none;
+    padding: 0;
+    cursor: pointer;
+    outline: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 code {
-  font-family: "Pretendard";
+    font-family: 'Pretendard';
 }
 div {
-  margin: 0 auto;
-  position: relative;
-  overflow: hidden;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
 }
 /**************** font ******************/
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 100;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-Thin.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-Thin.woff") format("woff"),
-    url("./assets/fonts/Pretendard-Thin.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 100;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-Thin.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-Thin.woff') format('woff'),
+        url('./assets/fonts/Pretendard-Thin.otf') format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 200;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-ExtraLight.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-ExtraLight.woff") format("woff")
-      url("./assets/fonts/Pretendard-ExtraLight.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 200;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-ExtraLight.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-ExtraLight.woff') format('woff') url('./assets/fonts/Pretendard-ExtraLight.otf')
+            format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 300;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-Light.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-Light.woff") format("woff"),
-    url("./assets/fonts/Pretendard-Light.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 300;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-Light.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-Light.woff') format('woff'),
+        url('./assets/fonts/Pretendard-Light.otf') format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 400;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-Regular.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-Regular.woff") format("woff"),
-    url("./assets/fonts/Pretendard-Regular.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 400;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-Regular.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-Regular.woff') format('woff'),
+        url('./assets/fonts/Pretendard-Regular.otf') format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 500;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-Medium.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-Medium.woff") format("woff"),
-    url("./assets/fonts/Pretendard-Medium.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 500;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-Medium.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-Medium.woff') format('woff'),
+        url('./assets/fonts/Pretendard-Medium.otf') format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 600;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-SemiBold.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-SemiBold.woff") format("woff"),
-    url("./assets/fonts/Pretendard-SemiBold.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 600;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-SemiBold.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-SemiBold.woff') format('woff'),
+        url('./assets/fonts/Pretendard-SemiBold.otf') format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 700;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-Bold.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-Bold.woff") format("woff"),
-    url("./assets/fonts/Pretendard-Bold.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 700;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-Bold.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-Bold.woff') format('woff'),
+        url('./assets/fonts/Pretendard-Bold.otf') format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 800;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-ExtraBold.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-ExtraBold.woff") format("woff"),
-    url("./assets/fonts/Pretendard-ExtraBold.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 800;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-ExtraBold.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-ExtraBold.woff') format('woff'),
+        url('./assets/fonts/Pretendard-ExtraBold.otf') format('otf');
 }
 
 @font-face {
-  font-family: "Pretendard";
-  font-weight: 900;
-  font-style: normal;
-  src: url("./assets/fonts/Pretendard-Black.woff2") format("woff2"),
-    url("./assets/fonts/Pretendard-Black.woff") format("woff"),
-    url("./assets/fonts/Pretendard-Black.otf") format("otf");
+    font-family: 'Pretendard';
+    font-weight: 900;
+    font-style: normal;
+    src: url('./assets/fonts/Pretendard-Black.woff2') format('woff2'),
+        url('./assets/fonts/Pretendard-Black.woff') format('woff'),
+        url('./assets/fonts/Pretendard-Black.otf') format('otf');
 }
 @font-face {
-  font-family: "asterisk-sans-variable", sans-serif;
-  font-display: fallback;
+    font-family: 'asterisk-sans-variable', sans-serif;
+    font-display: fallback;
 
-  src: url("./assets/fonts/fonnts.com-Asterisk_Sans_Variable.otf")
-    format("opentype");
+    src: url('./assets/fonts/fonnts.com-Asterisk_Sans_Variable.otf') format('opentype');
 
-  /* 사용할 폰트의 기본 스타일 */
-  font-weight: 400;
-  font-style: normal;
+    /* 사용할 폰트의 기본 스타일 */
+    font-weight: 400;
+    font-style: normal;
 }
-@import url("https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
